--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Haozheng Ma"
-  avatar           : "images/mahz512.png"
+  avatar           : "images/mahz.png"
   bio              : "Lorem ipsum College"
   location         : "Wuhan, China"
   employer         :
