--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Haozheng Ma"
   avatar           : "images/mahz.png"
-  bio              : "China University of Geoscience, Wuhan"
+  bio              : "China University of Geosciences, Wuhan"
   location         : "Wuhan, China"
   employer         :
   pubmed           : 
