--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Haozheng Ma"
   avatar           : "images/mahz.png"
-  bio              : "University of Illinois Urbana Champaign"
+  bio              : "University of Illinois Urbana-Champaign"
   location         : "Urbana, USA"
   employer         :
   pubmed           : 
